# Jobi

./: .env.example  .gitignore  ENHANCED_RAG_SUMMARY.md  README.md  pyproject.toml
examples/: custom_chunking_examples.py
jobi/: __init__.py  chat.py  cli.py  ollama_client.py  rag.py
jobi/rag/: __init__.py  chunkers.py  core.py  ingestion.py  utils.py
jobi/web/: __init__.py  client.py  models.py
